fixed backgrounds and font readability

--- a/css/index.css
+++ b/css/index.css
@@ -228,11 +228,13 @@ properties are for individual pages, prefix selectors with class attribute follo
     .index h1 {
         text-align: center;
         font-size: 22.0rem;
-        color: #f9f9f9;}
+        color: #f9f9f9;
+        text-shadow: 3px 3px 5px rgba(108,108,109,0.67);}
     .index h2 {
         text-align: center;
         font-size: 5.0rem;
-        color: #f9f9f9;}
+        color: #f9f9f9;
+        text-shadow: 3px 3px 5px rgba(108,108,109,0.67);}
 }
 
 
@@ -255,46 +257,106 @@ properties are for individual pages, prefix selectors with class attribute follo
     .about {
         height: 300vh;
         width: 100vw;
-        background-color: #f9f9f9;}
-    .about nav a.active:after {
-        width: 100%;}
-    .about header {
-        height: 100vh;
-        width: 100vw;
-        background-image: url("../img/claudio-hirschberger-1326178-unsplash.jpg"); /* The image used */
-        background-color: #f9f9f9; /* Used if the image is unavailable */
-        /* height: 500px; You must set a specified height / not used */
-        background-position: center; /* Center the image */
-        background-repeat: no-repeat; /* Do not repeat the image */
-        background-size: cover; /* Resize the background image to cover the entire container */}
-    .about div {
-    }
-}
-@media (min-width: 1000px) {
-    .about {
-        height: 290vh;
-        width: 100vw;
         background-color: #f9f9f9;
-        background-image: url("../img/claudio-hirschberger-1326178-unsplash.jpg"); /* The image used */
+        background-image: url("../img/clay-banks-1277418-unsplash.jpg"); /* The image used */
         background-color: #f9f9f9; /* Used if the image is unavailable */
-        height: 90vh; /* You must set a specified height */
+        height: 100vh; /* You must set a specified height */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
-        background-size: cover; /* Resize the background image to cover the entire container */}
+        background-size: cover /* Resize the background image to cover the entire container */}
+    .about nav a,
+    .about nav a:link,
+    .about nav a:visited,
+    .about nav a:hover {
+        color: #364156;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        font-size: 2.0rem;
+        text-transform: uppercase;}
+    .about nav a:after {    
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 2px;
+        background: #364156;
+        width: 0;}
     .about nav a.active:after { 
         width: 100%;}
-    .about header {
-        height: 90vh;
-        width: 100vw;}
     .about div.topContainer {
+        height: 95vh;
+        max-width: 80vw;}
+    .about header {
+        width: 100vw;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);}
+        transform: translate(-50%, -30%);}
+    .about h1 {
+        text-align: center;
+        font-size: 5.0rem;
+        color: #f9f9f9;
+        text-shadow: 1px 1px 5px rgba(54,65,86,0.5);}
     .about div.bodyContainer {
         height: 200vh;
         width: 100vw;
-    }
+        background-color: #f9f9f9;}
+}
+@media (min-width: 1000px) {
+    .about {
+        height: 300vh;
+        width: 100vw;
+        background-color: #f9f9f9;
+        background-image: url("../img/automobile-classic-combi-1616262.jpg"); /* The image used */
+        background-color: #f9f9f9; /* Used if the image is unavailable */
+        height: 100vh; /* You must set a specified height */
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: auto; /* Resize the background image to cover the entire container */}
+    .about nav a,
+    .about nav a:link,
+    .about nav a:visited,
+    .about nav a:hover {
+        color: #dfe0e4;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        font-size: 2.0rem;
+        text-transform: uppercase;}
+    .about nav a:after {    
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 2px;
+        background: #dfe0e4;
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+        width: 0;}
+    .about nav .demoLink:after {
+        background: #ae213f;}
+    .about nav a:hover:after { 
+    width: 100%;}
+    .about nav a.active:after { 
+        width: 100%;}
+    .about div.topContainer {
+        height: 90vh;
+        max-width: 80vw;;}
+    .about header {
+        width: 100vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 12.5%);}
+    .about h1 {
+        text-align: center;
+        font-size:11.0rem;
+        color: #f9f9f9;
+        text-shadow: 1px 1px 5px rgba(249,249,249,0.25);}
+    .about div.bodyContainer {
+        height: 200vh;
+        width: 100vw;
+        background-color: #f9f9f9;}
 }
 
 /* Examples.html
